--- a/fields.yml
+++ b/fields.yml
@@ -1,7 +1,7 @@
 ## YAML Template.
 ---
 
-add_user: 
+add_user:
   desc: Add a new user into the system
   access: admin
   url: /user/create
@@ -12,15 +12,15 @@ admin:
 agree_terms:
   name: I have read and accepted the terms and conditions.
   valid: equals(1, Must agree and accept to terms and conditions)
-  
-  
+
+
 audit_trail:
   access: admin
   url: /user/audit_trail
 
 blank:
   name: " "
-  
+
 calculate_days:
   type: calculate_period
   unit: day
@@ -40,29 +40,29 @@ cellphone:
   desc: The cellphone number at which you can be contacted on
   valid: national_tel
 
-change_password: 
+change_password:
   desc: Change your current password
   access: reg
   action: dialog
   url: /user/start_reset_password
 
 confirm_details:
-  name: I confirm that the details provided are true and correct. 
+  name: I confirm that the details provided are true and correct.
   valid: equals(1, Must confirm that details are true and correct)
-    
+
 contacts:
   email: support@mukoni.co.za
 
-confirm_password: 
+confirm_password:
   type: password
   desc: Type in the same password as above to confirm correctness
   valid: matches(password)
-  
+
 country:
-  options:    
+  options:
     - sql: SELECT item_code,item_name item_code from ref_list WHERE list_name = "country"
   valid: provided
-    
+
 day_of_month:
   options:
     - 1st
@@ -95,7 +95,7 @@ day_of_month:
     - 28th
     - 29th
     - 30th
-    - 31st  
+    - 31st
 
 day_of_week:
   options:
@@ -106,48 +106,45 @@ day_of_week:
     - Thursday
     - Friday
     - Saturday
-    
-    
+
+
 developed_by:
   name: developed by Mukoni Software
   action: redirect
   url: http://www.mukoni.co.za
   target: _blank
- 
-  
+
+
 email:
   desc: Valid e-mail address
   name: Email Address
-  valid: 
+  valid:
     - email
 
 email_address:
-  desc: Valid e-mail address
-  name: Email Address
-  valid: 
-    - email
+  type: email
 
 error_page:
   desc: Unexpected error occured. Please report to your System Administrator.
- 
+
 facebook:
   src: /fb.png
   url: http://facebook.com
-  
+
 first_name:
   desc: Your first name as written in your ID book
   valid: name
 
 forgot_password:
-  desc: Click here if you have forgotten your password and you need to reset it  
+  desc: Click here if you have forgotten your password and you need to reset it
   url: /password_changer/forgot
-  
+
 goto:
   action: $page.html
- 
+
 home:
   url: /home
-     
+
 id:
   name: Reference #
 
@@ -159,14 +156,14 @@ id_no:
 
 id_number:
   type: id_no
-  
+
 last_name:
   desc: Your last name as written in your ID book
   valid: name
 
 latitude:
   desc: Distance north or south from the equator
-  valid: 
+  valid:
     - decimal
 
 login:
@@ -174,11 +171,11 @@ login:
   access: public
   audit: $email
   url: /user/login
-  src: /logout_icon.jpg 
+  src: /logout_icon.jpg
 
 logout:
   desc: Log out of the system
-  access: reg 
+  access: reg
   src: /logout_icon.jpg
   action: post
   post:
@@ -186,26 +183,26 @@ logout:
     - sql_exec: insert into audit_trail(user_id,action,detail) values($uid,'Logout','$email')
     - call: session_destroy()
     - redirect: /home
-    
+
 
 longitude:
-  desc: Angular distance east or west on the earth's surface  
-  valid: 
+  desc: Angular distance east or west on the earth's surface
+  valid:
     - decimal
 
 lineage_sql: >
-  select concat_ws(',',c.$key_name,p1.$key_name,p2.$key_name,p3.$key_name,p4.$key_name,p5.$key_name) from $table c 
+  select concat_ws(',',c.$key_name,p1.$key_name,p2.$key_name,p3.$key_name,p4.$key_name,p5.$key_name) from $table c
   left join $table p1 on c.$parent_key = p1.$key_name
   left join $table p2 on p1.$parent_key = p2.$key_name
   left join $table p3 on p2.$parent_key = p3.$key_name
   left join $table p4 on p3.$parent_key = p4.$key_name
   left join $table p5 on p4.$parent_key = p5.$key_name
   where c.$key_name = '$key'
-  
+
 manage_user_group:
   access: user
   url: /user/groups
-  
+
 manage_users:
   access: user
   url: /user/list
@@ -228,7 +225,7 @@ month:
     - october
     - november
     - december
-     
+
 mukoni_logo:
     desc: Visit our home page
     type: image
@@ -238,18 +235,18 @@ mukoni_logo:
 next:
   call: ""
   merge: true
-  attr: 
+  attr:
     class: action wizard-jump
-    
-    
+
+
 password:
   desc: A secret combination of letters and number only known to you. Please do not give out your password.
   valid: password
- 
+
 query:
   type: button
   call: $class::$invoker($key)
-  
+
 register:
   desc: Click here to register
   access: public
@@ -259,22 +256,22 @@ send_email:
   support: Mukoni Support <support@mukoni.co.za>
   headers:
     - MIME-Version: "1.0"
-    - Content-type: text/html; charset=iso-8859-1    
+    - Content-type: text/html; charset=iso-8859-1
   from: $from_user <$from_email>
   to: $to_user <$to_email>
-  
+
 
 start_date:
-  name: Start Date 
+  name: Start Date
   desc: Date Effective From
-  
-    
+
+
 submit_page:
   type: submit
   name: Submit
   call: $class::$page($key)
 
-      
+
 support_email: Mukoni Support <support@mukoni.co.za>
 
 
@@ -288,7 +285,7 @@ title:
     - Ms
     - Prof
     - Rev
-    
+
 twitter:
   src: /twitter.png
   url: https://twitter.com
@@ -297,7 +294,7 @@ validator:
   action: post
   validate: all
 
-view_profile: 
+view_profile:
   desc: View my profile
   access: reg
   url: /user/profile
@@ -317,7 +314,7 @@ weekday:
     - Thursday
     - Friday
     - Saturday
-    
+
 wizard_post:
   type: button
   selector: "#page *"
@@ -325,5 +322,3 @@ wizard_post:
   call: $class::$invoker($key)
   action: post
   attr: {wizard-jump: $code}
-
-    
